# 461_pai

./: .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt  test_api.sh  vercel.json
api/: index.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BNFlowNode.tsx  GraphModal.tsx  InfoPanel.tsx  MathBlock.tsx  Modal.tsx  NodeCard.tsx  RangeSlider.tsx  SamplingPanel.tsx  SolverModal.tsx
frontend/src/content/: bayesian_networks.ts  blr.ts  gp.ts  hmm.ts  kalman.ts  types.ts
frontend/src/pages/: BayesianLinearRegression.tsx  BayesianNetworks.tsx  GaussianProcesses.tsx  HiddenMarkovModels.tsx  KalmanFilter.tsx
frontend/src/types/: index.ts
modules/bayesian_linear_regression/: model.py  router.py
modules/bayesian_networks/: inference.py  models.py  page.py  sampling.py  solver.py  ve_inference.py
modules/gaussian_processes/: model.py  router.py
modules/hmm/: __init__.py  model.py  router.py
modules/kalman_filter/: model.py  router.py
shared/: graph_viz.py  math_display.py  types.py
slides/: 01_bayesian_networks.md  02_hidden_markov_models.md  03_bayesian_linear_regression.md  04_kalman_filter.md  05_gaussian_processes.md  README.md  render.sh
